// Copyright 2017 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package testdata;

import "google/protobuf/timestamp.proto";

message TestMessage {
    string name = 1;
    google.protobuf.Timestamp timestamp = 2;
    NestedTestMessage nested = 3;
    repeated NestedTestMessage repeated_nested = 4;

    // This field will be ignored because it is
    // google.protobuf.Struct.
    google.protobuf.Struct wil_be_ignored = 5;
}

message NestedTestMessage {
    string name = 1;
}
